--- a/lesson1.html
+++ b/lesson1.html
@@ -11,6 +11,7 @@
     <button>Happy Birthday Paul🎂</button>
     <button>Wish you all the best</button>
     <button>Always be someday you gonna look back and say God this is more than i prayed for consistency, self desiplined, Delayed Gratification is the key for our success and of course the number one is to believe in God more the in ourselves</button>
+    <button>Finding Peace within your self that no one can break it even your love ones</button>
 </body>
 
 </html>
