--- a/lesson2.html
+++ b/lesson2.html
@@ -7,8 +7,8 @@
     <title>Branching Merging</title>
 
     <button>Testing Fixed</button>
-    <p>Feature1</p>
     <P>New-Feature</P>
+    <p>New Feature1</p>
 
 </head>
 
